# whitea

./: Cargo.toml  LICENSE  default_config.yml  whitea.yml
backend/: Cargo.toml
backend/src/: lib.rs  telemetry.rs
configuration/: Cargo.toml
configuration/src/: backend_config.rs  lib.rs  shell_string.rs
configuration/src/ytdlp/: mod.rs  network.rs
gui/: pubspec.yaml
gui/lib/: drawer.dart  main.dart  sidebar.dart
src/: main.rs
www/: .prettierrc.json  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs
www/src/: App.svelte
