[package]
name = "whitea"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backend = { path = "./backend" }
configuration = { path = "./configuration" }
color-eyre = "0.6"

[workspace]
members = ["backend", "configuration"]
