[package]
name = "configuration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
config = "0.13.3"
dirs = "5.0"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.19"
shellexpand = { version = "3.1", features = ["full"] }
